Update HOME LINK in signup.html bug

--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
     <nav class="navbar my-bg-color navigation-bar navbar-expand-sm">
 
         <div class="container-fluid">
-          <a href="TinSD.html"id="hover-brand"class=" brand-hover my-text-color h1 text-decoration-none">tinSD</a>
+          <a href="https://nvenkm.github.io/tinsd.github.io/"id="hover-brand"class=" brand-hover my-text-color h1 text-decoration-none">tinSD</a>
           <button class="navbar-toggler"type="button"data-bs-toggle="collapse"data-bs-target="#navbarTogglerDemo02"aria-controls="navbarTogglerDemo02"aria-expanded="false"aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
