Update cover text index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
 
-
+ 
 
 
     <!-- COVER PAGE -->
@@ -62,12 +62,10 @@
       <div class="row row-custom cover-row align-items-center">
         <div class="col-lg-6 col-md-12 col-sm-12 " style="margin-bottom:3rem" >
           <p class="lead cover-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae
-            repellat modi amet id suscipit dignissimos vitae odio molestias
-            ipsam vero ad facilis exercitationem repudiandae aliquam, accusamus
-            voluptate veniam eligendi dolorum fugit ex quia minus corrupti.
-            Animi delectus fuga tenetur quaerat ad, temporibus deleniti quisquam
-            odit saepe esse quo, voluptas aperiam!
+            Welcome to tinSD, tinSD is a tinder parody website for the students of SD college.
+            This website does not abuses the personal information of students in any way.
+            We try our best to keep a healhty environment for the students.
+            For any copyright or other issues please contact us
           </p>
           <button class="btnn my-bg-color">Get Started</button>
           <button class="btnn my-bg-color">Rules and Regulations</button>
