Update  rules and regulations in  index.html
changed button tag to <a> tag to add an href.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             We try our best to keep a healhty environment for the students.
             For any copyright or other issues please contact us
           </p>
-          <button class="btnn my-bg-color">Get Started</button>
-          <button class="btnn my-bg-color">Rules and Regulations</button>
+          <a class="btnn my-bg-color">Get Started</a>
+          <a class="btnn my-bg-color" href="rules.html">Rules and Regulations</a>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12">
           <img class="sdcover img-fluid" src="images/sdcover.jpg" alt="sdcollege" />
