--- a/rules.html
+++ b/rules.html
@@ -171,5 +171,14 @@
       </div>
       <p class="copyright-text">© Copyright 2022 TinSD</p>
     </footer>
+    
+    
+    <!-- BOOTSTRAP JAVASCRIPT -->
+    <script src="bootstrap.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
