--- a/rules.html
+++ b/rules.html
@@ -91,7 +91,7 @@
         </li>
 
         <li>
-          <p>Respect other members of the Instagram community.</p>
+          <p>Respect other members of the tinSD community.</p>
           <p>
             It's never OK to encourage violence or attack anyone based on their
             race, ethnicity, national origin, sex, gender, gender identity,
